k8s/opa/no-privileged-containers.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: noprivileged
spec:
  crd:
    spec:
      names:
        kind: NoPrivileged
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package noprivileged
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Container %v must not be privileged", [container.name])
        }
